<resources>
    <string name="app_name">Chucks</string>
    <string name="animal">Animals</string>
    <string name="career">Career</string>
    <string name="dev">Developer</string>
    <string name="food">Food</string>
    <string name="history">History</string>
    <string name="money">Money</string>
    <string name="movie">Movie</string>
    <string name="music">Music</string>
    <string name="political">Politics</string>
    <string name="religion">Religion</string>
    <string name="celebrity">Celebrities</string>
    <string name="explicit">Chuck Only</string>
    <string name="sport">Sport</string>
    <string name="travel">Travel</string>
    <string name="science">Science</string>
    <string name="fashion">Fashion</string>

    <string name="not_available">Not Available</string>
    <string name="select_category">Select Category</string>
    <string name="refresh_joke">Get new random Joke</string>

    <string name="refresh">Refresh</string>
    <string name="volley_error_message">That didn\'t work!</string>
    <string name="json_error_message">Error</string>
    <string name="main_page_image">mainPageImage</string>
    <string name="categories">Categories</string>
    <string name="download_error">Download cancelled!</string>
    <string name="download_success">The Download was successful!</string>
    <string name="cancel">Cancel</string>
    <string name="default_url">https://api.chucknorris.io/jokes/random</string>
    <string name="datalist_error_message">Data couldn\'t be loaded!</string>
    <string name="info_select_number_of_jokes">Select the number of jokes to load.</string>
    <string name="load_synthetic_jokes">Load synthetic jokes?</string>
    <string name="choose_name_for_content_of_jokes">Choose a name for the content of the jokes:</string>
    <string name="hint_for_option_edit_view">Enter Name(default is Chuck Norris)</string>
    <string name="load_synthetic_data">load synthetic data</string>
    <string name="max_entries">max entries</string>
    <string name="personal_name">personal name</string>
    <string name="options">Options</string>
    <string name="no_internet_message">Joke loading not possible. Try to reconnect with the internet.</string>
    <string name="save_name">Save name</string>
</resources>
